   Mar 2006: 0.2.3 Miek <miek@miek.nl>
   * bug: close files when catting them in cat().
   * Added gzip.sh + manual page
   * Added crypt.sh + manual page
     (both utils are not installed by default)
   * removed zipped/crypt feature from mirror,
     use rdup -c | crypt.sh | mirror -c 
   * simplified yesterday.sh and hist.sh
     added -d switch to hist.sh
   * The default algorithm for encryption is set 
     to blowfish - if you want to change this you'll
     have to edit the scripts.
   * crawler.c; removed the filestack, and added files
     directory to the tree, this elimintas half a the
     mallocs. Should also be quicker. As a result rdup
     is somewhat more complicated.

23 Feb 2006: 0.2.2 Miek <miek@miek.nl>
   -- major feature release --
   * output changes:
     - directory size is always set to zero
   * Added -F FORMAT option that allows you 
     to specify the exact output of rdup 
     (Patch from Aaron Bader)
   * Added -r: show only removed files
   * Added -m: only show new/modified files
     (Both from Aaron Bader)
   * -0 semantics changed: now only applies to 
     the internal filelist. If you want a NULL use
     '\0' in the -F FORMAT string
   * Documentation was updated to reflect the current code
   * strerror() is now also printed more often
   * add ferror() check to cat() in gfunc.c
   * renamed excl.sh to rdgrep.sh (rdup-grep)
   * various small bits: typo's, check for signals more often.


16 Feb 2006: 0.2.1 Miek <miek@miek.nl>
   * the output format was changed: 
     the path_size was added to it
   * a -c option was added, which concatenate the file's
     output to standard output. This is done to make 
     remote backups more easy. This also changes rdup's output!
   * a -s <size> option was added which will only print
     out files that are smaller then a certain size.
   * A beginning was made with a perl impl. of hdup2, which 
     runs on top of rdup.
   * rmirror and mirror are combined into mirror.sh